Fix alignment of attributes values

--- a/simple-library-desktop/src/renderer/components/misc/keyvaluepair/keyValuePair.css
+++ b/simple-library-desktop/src/renderer/components/misc/keyvaluepair/keyValuePair.css
@@ -13,8 +13,9 @@
 }
 
 .kv-pair > .kv-pair-value {
-	overflow: hidden;
-	display:  flex;
+	overflow:    hidden;
+	display:     flex;
+	align-items: center;
 }
 
 .kv-pair > .kv-pair-value-show-overflow {
